# beat-weaver

./: .gitignore  README.md  pyproject.toml
beat_weaver/: cli.py
beat_weaver/model/: audio.py  config.py  dataset.py  muq_embeddings.py  training.py  transformer.py
beat_weaver/schemas/: v2.py  v3.py
beat_weaver/sources/: beatsaver.py  unity_extractor.py
beat_weaver/storage/: writer.py
configs/: medium_conformer_bs12.json  medium_conformer_bs12_tuned.json  medium_muq.json
plans/: 005-pretrained-encoder-repo-strategy.md  006-pretrained-encoder-repo-scaffold.md  007-muq-integration-spec.md  008-tokenizer-and-context-notes.md  009-muq-frame-alignment-experiments.md  010-muq-repo-migration-checklist.md
tests/: test_audio.py  test_beatsaver.py  test_dataset_filtering.py  test_muq_embeddings.py  test_parsers.py  test_schemas.py  test_writer.py
